--- a/DependencyInjection/DependencyInjection.WinForm/DependencyInjection.WinForm.csproj
+++ b/DependencyInjection/DependencyInjection.WinForm/DependencyInjection.WinForm.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Objects\IProduct.cs" />
     <Compile Include="Objects\ProductSqlServer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
